# pinocchio-template

./: Cargo.toml  README.md  package.json
clients/rust/: Cargo.toml
idl/: myproject.json
integration_tests/: Cargo.toml
integration_tests/tests/: test_initialize.rs
integration_tests/tests/helpers/: mod.rs
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instructions.rs  lib.rs
program/src/processor/: initialize.rs  mod.rs
program/src/processor/shared/: pda_utils.rs
program/src/state/: account.rs
scripts/: generate-clients.js
