[workspace]

members = ["program", "integration_tests", "clients/rust"]

resolver = "2"

package.version = "0.1.0"
package.edition = "2021"

[workspace.dependencies]
borsh = "1.5.5"
litesvm = "0.6.0"
pinocchio = "0.7.1"
pinocchio-log = "0.3.0"
pinocchio-pubkey = "0.2.2"
pinocchio-system = "0.2.1"
shank = { version = "0.4.3-alpha.1", features = ["pinocchio"] }
myproject-client = { path = "clients/rust" }
solana-program = "2.2.1"
solana-sdk = "2.2.1"
thiserror = "2.0.11"
